--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "antd": "^6.0.1",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.17",
     "firebase": "^12.6.0",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.556.0",
     "next": "16.0.3",
     "react": "19.2.0",
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
     "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.1",
     "zustand": "^5.0.9"
   },
@@ -33,6 +34,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.9.6",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
