--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.54.2",
+    "react-to-print": "^3.2.0",
     "recharts": "^2.15.0",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5",
