--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "firebase": "^12.6.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.556.0",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.54.2",
